# flightdata_cspvtltd

./: .gitignore  Chatgpt (2).xlsx  package-lock.json
APIDOCS/: backend_apis.md
Architecture/: backend_architecture.md
Installation/: AirGapped_Windows.md
backend/: .env  .env.example  README.md  WINDOWS.md  nginx.conf.example  requirements.txt  run_dev.ps1  run_dev.sh  start-minio.ps1
backend/app/: main.py
backend/app/calculations/: __init__.py  catalog.py  derived.py
backend/app/core/: auth.py  celery.py  celery_app.py  config.py  data_window.py  minio_client.py  redis_client.py  rust_bridge.py  security.py  system_info.py
backend/app/db/: mongo.py  sync_mongo.py
backend/app/mat/: __init__.py  indexing.py  processor.py  reader.py  routes.py  schemas.py  slicing.py
backend/app/models/: budget.py  documents.py  flight_data.py  flight_plot.py  ingestion.py  meeting.py  notification.py  project.py  records.py  student_engagement.py  user.py  visualization.py
backend/app/repositories/: ingestions.py  notifications.py  projects.py  visualizations.py
backend/app/routers/: auth.py  budgets.py  calculations.py  documents.py  flight_data.py  flight_plot.py  ingestion.py  mat.py  (+7 more)
backend/rust/flightdata_rust/: Cargo.toml
backend/rust/flightdata_rust/src/: lib.rs
backend/sample_data/: dummy_visualization.csv
backend/scripts/: run-stack.ps1  run_scripts_nodocker.py  run_stack.py  seed_admin.py
backend/tests/: test_mat_module.py
frontend/: .env.local  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
(+209 files in other folders)
