[package]
name = "flightdata_rust"
version = "0.1.0"
edition = "2021"
authors = ["FlightData Engineering"]
license = "MIT"

[lib]
name = "flightdata_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
calamine = "0.22"
matfile = "0.2"
rayon = "1.10"
parquet = { version = "57", default-features = false, features = ["arrow"] }
arrow = "57"
arrow-pyarrow = "57"
